# qualitative-response-llm-analyst

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  test-release.yml
data/: README.md
docs/: TODO.md  _toc.md
docs/agents/: README.md
docs/spec/: overview.md  schemas.md  workflow.md
prompts/: README.md
src/qrla/: cli.py  llm_client.py  prompt_templates.py  resources.py  stage1_discovery.py  stage1_review.py  stage2_assignment.py  stage2_review_assignments.py  stage3_summary.py  themes.py  validation.py
src/qrla/prompts/: __init__.py  stage1_discovery.txt  stage1_review.txt  stage2_assignment.txt
templates/: README.md  qual_coding_template.xlsx
tests/: test_cli.py  test_resources.py  test_validation.py
