[project]
name = "qualitative-response-llm-analyst"
version = "0.1.0"
description = "LLM-assisted qualitative survey coding with auditable Excel workbooks"
readme = "README.md"
license = "BSD-2-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Martin Foster" }]
keywords = ["qualitative", "survey", "coding", "themes", "llm", "openrouter", "excel"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
  "typer>=0.9",
  "pandas>=2.0",
  "openpyxl>=3.1",
  "python-dotenv>=1.0",
  "httpx>=0.24",
  "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/martinffoster/qualitative-response-llm-analyst"
Repository = "https://github.com/martinffoster/qualitative-response-llm-analyst"
Documentation = "https://github.com/martinffoster/qualitative-response-llm-analyst/tree/main/docs"
Issues = "https://github.com/martinffoster/qualitative-response-llm-analyst/issues"
Changelog = "https://github.com/martinffoster/qualitative-response-llm-analyst/releases"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "build>=1.0",
  "twine>=5.0",
]

[project.scripts]
qrla = "qrla.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
qrla = ["prompts/*.txt", "templates/*.xlsx"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"
